--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "lint:fix": "prettier ./scss --write --log-level warn",
     "release": "replugged release"
   },
-  "type": "module",
-  "dependencies": {
+  "devDependencies": {
     "@parcel/config-default": "^2.9.3",
     "@parcel/core": "^2.9.3",
     "@parcel/transformer-sass": "^2.9.3",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.8.4",
     "prettier": "^3.0.3",
-    "replugged": "^4.6.2",
+    "replugged": "^4.6.5",
     "salt-bd-scss": "^1.1.0"
   }
 }
