--- a/.github/workflows/bd.yml
+++ b/.github/workflows/bd.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
       - name: Checkout theme
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 21
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
@@ -29,7 +29,7 @@ jobs:
         run: pnpm install
 
       - name: Build CSS
-        run: pnpm run bd
+        run: pnpm run build:bd
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
