--- a/.github/workflows/rp.yml
+++ b/.github/workflows/rp.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
       - name: Checkout theme
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 21
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: Build and bundle theme into .asar
-        run: pnpm run rp
+        run: pnpm run build:rp
 
       - name: Release bundled asar, json, and theme.css
         uses: ncipollo/release-action@v1
