--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "dev": "bd-scss dev",
     "dev:rp": "replugged build theme --watch",
     "dev:vc": "bd-scss dev:vc",
-    "bd": "bd-scss build",
-    "rp": "replugged bundle theme",
+    "dev:vt": "bd-scss dev:vt",
+    "build:bd": "bd-scss build",
+    "build:rp": "replugged bundle theme",
     "lint": "prettier ./scss --check",
     "lint:fix": "prettier ./scss --write --log-level warn",
     "release": "replugged release"
   },
   "devDependencies": {
-    "prettier": "^3.0.3",
-    "replugged": "^4.7.5",
-    "salt-bd-scss": "^1.1.0"
+    "prettier": "^3.1.1",
+    "replugged": "^4.7.7",
+    "salt-bd-scss": "^1.2.1"
   }
 }
