--- a/.github/workflows/rp.yml
+++ b/.github/workflows/rp.yml
@@ -17,12 +17,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 21
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
           version: latest
 
@@ -30,7 +30,7 @@ jobs:
         run: pnpm install
 
       - name: Build and bundle theme into .asar
-        run: pnpm run build:rp
+        run: pnpm run build:asar
 
       - name: Release bundled asar, json, and theme.css
         uses: ncipollo/release-action@v1
