--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template-discord-theme",
-  "version": "1.1.2",
+  "version": "1.0.0",
   "description": "A template Discord theme for multiple client mod support.",
   "repository": "github:MiniDiscordThemes/Template",
   "author": "Saltssaumure <themes@saltssaumure.net>",
@@ -8,7 +8,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bd-scss dev",
+    "dev:bd": "bd-scss dev",
     "dev:rp": "replugged build theme --watch",
     "dev:vc": "bd-scss dev:vc",
     "dev:vt": "bd-scss dev:vt",
